移除 .newInstance() 方法 (#15)
* fix-newInstance

* fix-newInstance